Enable preview for test T8312229.