@@ -24,7 +24,7 @@
  * @test
  * @bug 8312229
  * @summary Ensure javac does not crash when a variable is used from an anonymous class
- * @compile T8312229.java
+ * @compile --enable-preview -source ${jdk.version} T8312229.java
  */
 public class T8312229 {
     void test(Object o) {
